feat: now array is filled with objects that store several values for each tile

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -86,6 +86,8 @@ h1 {
   width: 80px;
   height: 80px;
   box-sizing: border-box;
+  transition: top 0.15s ease-in-out, left 0.15s ease-in-out;
+  transition: transform 0.1s ease-in-out;
 }
 
 .tile[data-value="2"] {
