--- a/styles/styles.css
+++ b/styles/styles.css
@@ -70,24 +70,29 @@ h1 {
 {
   background-color: var(--light-accent);
   border: none;
+  z-index: 1;
 }
 
 .tile {
-  border: 6px solid black;
-  background-color: var(--tile_2);
+  position: absolute;
+  z-index: 2;
+
+  width: 80px;
+  height: 80px;
   border-radius: 6px;
-  font-size: 32px;
-  font-weight: bold;
+  border: 6px solid black;
+  box-sizing: border-box;
+
   display: flex;
   justify-content: center;
   align-items: center;
-  text-align: center;
-  position: absolute;
-  width: 80px;
-  height: 80px;
-  box-sizing: border-box;
-  transition: top 0.15s ease-in-out, left 0.15s ease-in-out;
-  transition: transform 0.1s ease-in-out;
+  font-size: 32px;
+  font-weight: bold;
+
+  background-color: var(--tile_2);
+
+  transition: transform 0.15s ease-in-out;
+  will-change: transform;
 }
 
 .tile[data-value="2"] {
@@ -165,6 +170,11 @@ h1 {
   border-radius: 8px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   text-align: center;
+}
+
+.game_won_container
+{
+  display: none;
 }
 
 #restart-btn-2 {
